# fowl

./: .gitignore  DEVELOPERS.rst  LICENSE  Makefile  NEWS.rst  README.rst  demo.json  p  pyproject.toml  requirements-pinned.txt  setup.cfg  setup.py  ssh-orig.json  ssh.json  testcase.py  update-version.py  viz.py  viz2.py  viz4.py
.github/workflows/: coverage.yml  integration.yml  lint.yml  unit.yml
docs/: README.rst  api.rst  conf.py  frontend-protocol.rst  index.rst  messages.rst  protocol.rst  releases.rst  usage.rst
integration/: TODO  conftest.py  test_happy.py  test_human.py  util.py
snap/: snapcraft.yaml
src/fow/: __main__.py  _proto.py  cli.py
src/fow/test/: conftest.py  test_cli.py
src/fowl/: __init__.py  __main__.py  _proto.py  _tui.py  api.py  chicken.py  cli.py  daemon.py  messages.py  observer.py  policy.py  status.py  tcp.py  visual.py
src/fowl/test/: test_cli.py  test_commands.py  test_forward.py  test_observer.py  test_policy.py  test_subprocess_coverage.py  test_tcp.py  util.py
