[metadata]
name = fow
version = attr: fow.__version__
description =
    Forward Over Wormhole pipes streaming data over Dilated Magic
    Wormhole subchannels. Secure communication with easy setup
long_description = file: README.rst
keywords = magic-wormhole, private, cryptography, forwarding
license = MIT
classifiers =
    Framework :: Twisted
    Programming Language :: Python :: 3
author = meejah
author_email = meejah@meejah.ca
maintainer = meejah
home_page = https://meejah.ca/projects/fow

[options]
# All of the source is in the src directory.  The weird syntax is
# defining a dict with a key "" and a value "src".
package_dir =
    =src

install_requires=
    click

[flake8]
# Enforce all pyflakes constraints, and also prohibit tabs for indentation.
# Reference:
#   https://flake8.pycqa.org/en/latest/user/error-codes.html
#   https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
#   https://pypi.org/project/flake8-isort/#error-codes
#   https://pypi.org/project/flake8-black/#flake8-validation-codes
select = F, W191, I, BLK